# sol-vod

./: Anchor.toml  README.md
app/: package.json  tailwind.config.js  vue.config.js
app/src/: App.vue  main.css  main.js  routes.js
app/src/api/: index.js  purchases.js  videos.js
app/src/components/: MainNavigation.vue  MediaGrid.vue  MediaItem.vue  TheSidebar.vue  VideoPlayer.vue
app/src/components/Page/: Home.vue  Library.vue  Upload.vue
app/src/components/Provider/: Workspace.vue
app/src/composables/: index.js  useWorkspace.js
app/src/models/: purchase.js  video.js
app/src/util/: keys.js
programs/sol-vod/: Cargo.toml
programs/sol-vod/src/: lib.rs
tests/: sol-vod.ts
