[package]
name = "sol-vod"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_vod"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
chainlink = { git = "https://github.com/hansy/chainlink-solana", package = "chainlink-solana", features = ["no-entrypoint"] }

